@@ -36,16 +36,16 @@ f2 = ot.SymbolicFunction(inVar, formula)
 mySum = f1 + f2
 print("mySum=", mySum)
 value = mySum(inPoint)
-print("Value at  %s =\n%s" % (inPoint.clean(1e-5), value.clean(1e-5)))
+print(f"Value at  {inPoint} =\n{value}")
 gradient = mySum.gradient(inPoint)
-print("Gradient at  %s =\n%s" % (inPoint.clean(1e-5), gradient.clean(1e-5)))
+print(f"Gradient at  {inPoint} =\n{gradient}")
 hessian = mySum.hessian(inPoint)
-print("Hessian at  %s =\n%s" % (inPoint.clean(1e-5), hessian.clean(1e-5)))
+print(f"Hessian at  {inPoint} =\n{hessian}")
 myDiff = f1 - f2
 print("myDiff=", myDiff)
 value = myDiff(inPoint)
-print("Value at  %s =\n%s" % (inPoint.clean(1e-5), value.clean(1e-5)))
+print(f"Value at  {inPoint} =\n{value}")
 gradient = myDiff.gradient(inPoint)
-print("Gradient at  %s =\n%s" % (inPoint.clean(1e-5), gradient.clean(1e-5)))
+print(f"Gradient at  {inPoint} =\n{gradient}")
 hessian = myDiff.hessian(inPoint)
-print("Hessian at  %s =\n%s" % (inPoint.clean(1e-5), hessian.clean(1e-5)))
+print(f"Hessian at  {inPoint} =\n{hessian}")
