@@ -44,6 +44,7 @@
  * Deprecated EllipticalDistribution.setMean
  * Student.setMu/getMu now operate on Point
  * Deprecated Distribution.computeDensityGenerator methods
+ * Deprecated Point.clean
 
 === Documentation ===
 
